Change docker tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ services:
   - docker
 
 before_install:
-  - docker build -t lukaszkos1/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t lukaszkos/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true lukaszkos1/react-test npm test
+  - docker run -e CI=true lukaszkos/react-test npm test
 
 after_success:
-  - docker build -t lukaszkos1/multi-client ./client
-  - docker build -t lukaszkos1/multi-worker ./worker
-  - docker build -t lukaszkos1/multi-server ./server
-  - docker build -t lukaszkos1/multi-nginx ./nginx
+  - docker build -t lukaszkos/multi-client ./client
+  - docker build -t lukaszkos/multi-worker ./worker
+  - docker build -t lukaszkos/multi-server ./server
+  - docker build -t lukaszkos/multi-nginx ./nginx
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  - docker push lukaszkos1/multi-client
-  - docker push lukaszkos1/multi-worker
-  - docker push lukaszkos1/multi-nginx
-  - docker push lukaszkos1/multi-server
+  - docker push lukaszkos/multi-client
+  - docker push lukaszkos/multi-worker
+  - docker push lukaszkos/multi-nginx
+  - docker push lukaszkos/multi-server
